--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 {{ super() }}
-<p> {{ title }}
-
+<!-- <p> {{ title }} -->
+<p> FHE 2021
+<p> By Litvinov M., Korolev G., Shashkov I., Tesalin V.
+<form action="/upload_number" method="get">
+    <input type="submit" value="START" 
+         name="Submit" id="go" />
+</form>
 {% endblock %}
