--- a/client/templates/upload.html
+++ b/client/templates/upload.html
@@ -6,7 +6,7 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
-<form action="/upload_number" method="post" class="form-upload">
+<form action="/upload" method="post" class="form-upload">
 	{{ form.hidden_tag() }}
 	{% for field in form if field.name not in ['csrf_token', 'upload'] %}
 		<p> {{ field.label() }} 
@@ -22,8 +22,5 @@
 		{% endif %}
 	{% endfor %}
 	<p> {{ form.upload.label() }} {{ form.upload() }}
-	<!-- <p><label> Name:</label> <input type="text" name="username" value="" required />
-	<p><label> Your Number:</label> <input type="text" name="number" value="" required />
-	<p>	<input type="submit" value="Send"/> -->
 </form>
 {% endblock %}
