Fixed NOHE implementation (decoding of computation result) and socket connection, added server packet, changed flask form

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 {{ super() }}
 <!-- <p> {{ title }} -->
-<p> FHE HOHE implementation, 2021
+<p> FHE NOHE implementation, 2021
 <p> By Litvinov M., Korolev G., Shashkov I., Tesalin V.
 <form action="/upload" method="get">
     <input type="submit" value="START" 
