--- a/client/templates/upload.html
+++ b/client/templates/upload.html
@@ -8,8 +8,8 @@
 {% endfor %}
 <form action="/upload" method="post" class="form-upload">
 	{{ form.hidden_tag() }}
-	{% for field in form if field.name not in ['csrf_token', 'upload'] %}
-		<p> {{ field.label() }} 
+	{% for field in form if field.name not in ['csrf_token'] %}
+		<p> {{ field.label() if field.name is not in ['upload']}} 
 		{% if field.errors %}
 			{{ field(class="invalid") }}
 			<span class="invalid-feedback">
@@ -21,6 +21,6 @@
 			{{ field() }}
 		{% endif %}
 	{% endfor %}
-	<p> {{ form.upload.label() }} {{ form.upload() }}
+		
 </form>
 {% endblock %}
