--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -2,18 +2,25 @@
 <HTML>
 	<HEAD>
 		<link type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet" />
+		<h1 class="modal-header"> Fully Homomorphic Encryption </h1>
+		
 		{% block title %}
 		{% if title %}
-			<title>FHE -- {{ title }}</title>
+			<title>FHE - {{ title }}</title>
 		{% else %}
 			<title>FHE 2021 </title>
 		{% endif %}
 		{% endblock %}
 	</HEAD>
 
-	<BODY>
+	<BODY >
+
 	{% block content %}	
 		
 	{% endblock %}
+	<h3 align="center">
+			<img src="{{ url_for('static', filename='images/mipt.png') }}" style="width:50%">
+		</h3>
+	<h4 class="modal-footer"> Litvinov M., Korolev G., Shashkov I., Tesalin V. </h4>
 	</BODY>
 </HTML>
